--- a/check.html
+++ b/check.html
@@ -1,41 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rectangle Pill Background</title>
+    <style>
+        body {
+            background: #000000;
+            font-family: "Open Sans", Arial, sans-serif;
+            margin: 0;
+        }
+
+        @media (max-width: 600px) {
+            .mynav ul {
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                list-style-type: none;
+                width: 330px;
+                background-color: rgb(255, 255, 255);
+                height: auto;
+                padding: 0.5em;
+                border-radius: 30px;
+            }
+        }
+        @media (min-width: 600px) {
+            .mynav ul {
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                list-style-type: none;
+                width: 330px;
+                background-color: rgb(255, 255, 255);
+                height: auto;
+                padding: 0.5em;
+                border-radius: 30px;
+            }
+        }
+
+        .mynav li:not(:last-child) {
+            margin-right: 20px;
+            z-index: 999;
+        }
+
+        .mynav button {
+            display: block;
+            font-size: 20px;
+            color: black;
+            text-decoration: none;
+            padding: 7px 15px;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .target {
+            position: absolute;
+            background-color: rgb(215, 215, 215);
+            border-radius: 20px;
+            z-index: 1;
+            transition: all 0.35s ease-in-out;
+        }
+        .mynav {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 0, 0);
+            display: flex;
+            justify-content: center;
+            padding-top: 4em;
+        }
+        .pckInfo1 {
+            margin-top: 3em;
+            background-color: white;
+            width: 90%;
+            height: 500px;
+            transition: 1;
+        }
+
+        .pckInfo2 {
+            margin-top: 3em;
+            background-color: white;
+            width: 90%;
+            height: 500px;
+            display: none;
+        }
+        .pckInfo3 {
+            margin-top: 3em;
+            background-color: white;
+            width: 90%;
+            height: 500px;
+            display: none;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-<form id="submit-form" action="">
-<input type="text" id="fname" name="name" placeholder="Your name..">
-<input type="text" id="lname" name="email" placeholder="Your email">
-<textarea id="subject" name="message" placeholder="Write something.."></textarea>
-<input type="submit" value="Submit">
-</form>
+<nav class="mynav">
+    <ul>
+        <li><button>Lite</button></li>
+        <li><button>Standard</button></li>
+        <li style="z-index: 9999;"><button>Premium</button></li>
+    </ul>
+</nav>
 
-</div>
+<div class="target"></div>
 
-      <script>
-        $("#submit-form").submit((e)=>{
-            e.preventDefault()
-            $.ajax({
-                url:"https://script.google.com/macros/s/AKfycbwW4MXsRvIqU1K5Ws4vxcpEfPMRAI9Qy1o3kVQiImxj8VVY2K2nfYI29blK9OZy2dg/exec",
-                data:$("#submit-form").serialize(),
-                method:"post",
-                success:function (response){
-                    alert("Form submitted successfully")
-                    window.location.reload()
-                    //window.location.href="https://google.com"
-                },
-                error:function (err){
-                    alert("Something Error")
-    
-                }
-            })
-        })
-    </script>
+<section
+    style="
+        background-color: red;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+    "
+>
+    <div class="pckInfo1">Lite</div>
+    <div class="pckInfo2">Standard</div>
+    <div class="pckInfo3">Premium</div>
+</section>
+<script>
+   // Function to set opacity to 1 for the Lite option and change background color of body to green
+   function setLiteOpacity() {
+        document.querySelectorAll(".mynav button").forEach(function(btn) {
+            if (btn.innerText === "Lite") {
+                btn.style.opacity = "1";
+            } else {
+                btn.style.opacity = "0.50";
+            }
+        });
+        document.querySelector(".pckInfo1").style.display = "block";
+        document.querySelector(".pckInfo2").style.display = "none";
+        document.querySelector(".pckInfo3").style.display = "none";
+
+        // Move the target behind Lite
+        const liteBtn = document.querySelector(".mynav button:nth-child(1)");
+        const width = liteBtn.getBoundingClientRect().width;
+        const height = liteBtn.getBoundingClientRect().height;
+        const left = liteBtn.getBoundingClientRect().left + window.scrollX;
+        const top = liteBtn.getBoundingClientRect().top + window.scrollY;
+        const target = document.querySelector(".target");
+        target.style.width = `${width}px`;
+        target.style.height = `${height}px`;
+        target.style.left = `${left}px`;
+        target.style.top = `${top}px`;
+        target.style.transform = "none";
+    }
+
+    // Function to set opacity to 1 for the Standard option and change background color of body to red
+    function setStandardOpacity() {
+        document.querySelectorAll(".mynav button").forEach(function(btn) {
+            if (btn.innerText === "Standard") {
+                btn.style.opacity = "1";
+            } else {
+                btn.style.opacity = "0.50";
+            }
+        });
+        document.querySelector(".pckInfo1").style.display = "none";
+        document.querySelector(".pckInfo2").style.display = "block";
+        document.querySelector(".pckInfo3").style.display = "none";
+
+        // Move the target behind Standard
+        const standardBtn = document.querySelector(".mynav button:nth-child(2)");
+        const width = standardBtn.getBoundingClientRect().width;
+        const height = standardBtn.getBoundingClientRect().height;
+        const left = standardBtn.getBoundingClientRect().left + window.scrollX;
+        const top = standardBtn.getBoundingClientRect().top + window.scrollY;
+        const target = document.querySelector(".target");
+        target.style.width = `${width}px`;
+        target.style.height = `${height}px`;
+        target.style.left = `${left}px`;
+        target.style.top = `${top}px`;
+        target.style.transform = "none";
+    }
+
+    // Function to set opacity to 1 for the Premium option and change background color of body to blue
+    function setPremiumOpacity() {
+        document.querySelectorAll(".mynav button").forEach(function(btn) {
+            if (btn.innerText === "Premium") {
+                btn.style.opacity = "1";
+            } else {
+                btn.style.opacity = "0.50";
+            }
+        });
+        document.querySelector(".pckInfo1").style.display = "none";
+        document.querySelector(".pckInfo2").style.display = "none";
+        document.querySelector(".pckInfo3").style.display = "block";
+
+        // Move the target behind Premium
+        const premiumBtn = document.querySelector(".mynav button:nth-child(3)");
+        const width = premiumBtn.getBoundingClientRect().width;
+        const height = premiumBtn.getBoundingClientRect().height;
+        const left = premiumBtn.getBoundingClientRect().left + window.scrollX;
+        const top = premiumBtn.getBoundingClientRect().top + window.scrollY;
+        const target = document.querySelector(".target");
+        target.style.width = `${width}px`;
+        target.style.height = `${height}px`;
+        target.style.left = `${left}px`;
+        target.style.top = `${top}px`;
+        target.style.transform = "none";
+    }
+
+    // Set Lite as initially selected and display its associated package info
+    setLiteOpacity();
+
+    // Event listener to call respective opacity setting functions on click
+    document.querySelectorAll(".mynav button").forEach(function(btn, index) {
+        btn.addEventListener("click", function() {
+            if (index === 0) {
+                setLiteOpacity();
+            } else if (index === 1) {
+                setStandardOpacity();
+            } else if (index === 2) {
+                setPremiumOpacity();
+            }
+        });
+    });
+    // Code for updating target position
+    (function () {
+        const target = document.querySelector(".target");
+        const buttons = document.querySelectorAll(".mynav button");
+
+        function updateTargetPosition() {
+            const activeBtn = document.querySelector(".mynav button.active");
+            if (activeBtn) {
+                const width = activeBtn.getBoundingClientRect().width;
+                const height = activeBtn.getBoundingClientRect().height;
+                const left = activeBtn.getBoundingClientRect().left + window.scrollX;
+                const top = activeBtn.getBoundingClientRect().top + window.scrollY;
+
+                target.style.width = `${width}px`;
+                target.style.height = `${height}px`;
+                target.style.left = `${left}px`;
+                target.style.top = `${top}px`;
+                target.style.transform = "none";
+            }
+        }
+
+        function clickFunc() {
+            if (!this.classList.contains("active")) {
+                buttons.forEach(function(btn) {
+                    btn.classList.remove("active");
+                    btn.style.opacity = "0.50";
+                });
+
+                this.classList.add("active");
+                this.style.opacity = "1";
+
+                updateTargetPosition();
+            }
+        }
+
+        window.addEventListener("resize", updateTargetPosition);
+        window.addEventListener("scroll", updateTargetPosition);
+
+        buttons.forEach(function(btn) {
+            btn.addEventListener("click", clickFunc);
+        });
+    })();
+</script>
+
 </body>
 </html>
