--- a/packages.html
+++ b/packages.html
@@ -6,7 +6,6 @@
     <title>Packages - RBA Softwares</title>
     <link rel="stylesheet" href="CSS/styles.css">
    <link rel="stylesheet" href="CSS/design.css">
-   <script src="script.js"></script>
 </head>
 <body>
 
@@ -84,6 +83,7 @@
  </section>
 
                                                             <!-- Content Ends Here -->
-
+                                                            <script src="main.js"></script>
+                                                            <script src="script.js"></script>
 </body>
 </html>
