--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
        <div class="navI" style="display: flex; gap: 8em; justify-content: center; align-items: center; padding-left: 15px; padding-bottom: 10px; padding-top: 5px;" >
         <a href="index.html" >Home</a>
         <a href="about.html"style="color: white;">About</a>
-        <a href="pricing.html">Pricing</a>
+        <a href="packages.html">Packages</a>
         <a href="contact.html">Contact</a>
         <a href="rbaplus.html">RBA+</a>
        </div>
@@ -48,7 +48,7 @@
       <div class="overlay-content">
         <a href="index.html" Class="spNav" >Home</a>
         <a href="about.html" Class="spNav"style="color: white;">About</a>
-        <a href="pricing.html" Class="spNav">Pricing</a>
+        <a href="packages.html" Class="spNav">Packages</a>
         <a href="contact.html" Class="spNav">Contact</a>
         <a href="rbaplus.html" Class="spNav">RBA+</a>
       </div>
