--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Ready to create something? <br> Share your ideas with us, and let's turn them in
    <div class="navI" style="display: flex; gap: 8em; justify-content: center; align-items: center; padding-left: 15px; padding-bottom: 10px; padding-top: 5px;" >
     <a href="index.html" style="color: white;">Home</a>
     <a href="about.html">About</a>
-    <a href="pricing.html">Pricing</a>
+    <a href="packages.html">Packages</a>
     <a href="contact.html">Contact</a>
     <a href="rbaplus.html">RBA+</a>
    </div>
@@ -80,7 +80,7 @@ Ready to create something? <br> Share your ideas with us, and let's turn them in
 <div class="overlay-content">
 <a href="index.html" Class="spNav" style="color: white;">Home</a>
 <a href="about.html" Class="spNav">About</a>
-<a href="pricing.html" Class="spNav">Pricing</a>
+<a href="packages.html" Class="spNav">Packages</a>
 <a href="contact.html" Class="spNav">Contact</a>
 <a href="rbaplus.html" Class="spNav">RBA+</a>
 </div>
