--- a/rbaplus.html
+++ b/rbaplus.html
@@ -35,7 +35,7 @@
        <div class="navI" style="display: flex; gap: 8em; justify-content: center; align-items: center; padding-left: 15px; padding-bottom: 10px; padding-top: 5px;" >
         <a href="index.html" >Home</a>
         <a href="about.html">About</a>
-        <a href="pricing.html">Pricing</a>
+        <a href="packages.html">Packages</a>
         <a href="contact.html">Contact</a>
         <a href="rbaplus.html"style="color: white;">RBA+</a>
        </div>
@@ -47,7 +47,7 @@
       <div class="overlay-content">
         <a href="index.html" Class="spNav" >Home</a>
         <a href="about.html" Class="spNav">About</a>
-        <a href="pricing.html" Class="spNav">Pricing</a>
+        <a href="packages.html" Class="spNav">Packages</a>
         <a href="contact.html" Class="spNav">Contact</a>
         <a href="rbaplus.html" Class="spNav"style="color: white;">RBA+</a>
       </div>
@@ -59,6 +59,7 @@
 <h1 style="color: white; text-align: center; padding-top: 50px;">
   RBA+
 </h1>
+
   </div>
 
  </section>
