--- a/packages.html
+++ b/packages.html
@@ -247,8 +247,150 @@
 
         </div>
 
-        <div class="pckInfo2" id="pck2">Standard</div>
-        <div class="pckInfo3" id="pck3">Premium</div>
+        <div class="pckInfo2" id="pck2">
+        <div class="pckContainer">
+          <div class="sectionLeft">
+            <div class="pckInfo">
+              <span class="InfoH1" style="color: white">Standard Plan</span>
+              <hr style="margin-top: 1em" />
+              <div class="infoText" style="padding-top: 0.2em">
+                <ul>
+                  <li class="t1">This package includes upto 5 pages</li>
+                  <br />
+
+                  <li class="t1">
+                    Max 4 section for each page<br />
+                    <span class="t2">- Including Header and Footer, More can be added as
+                      Extras.<br /><span class="t3">Extras</span></span>
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    We give you unlimited images upload. <br />
+                    <span class="t2">- You can send us pictures or we will add Licensed
+                      Pictures as Extras. <br /><span class="t3">Extras</span></span>
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Max 4 videos supported (Supports GIF)<br />
+                    <span class="t2">- You can add 4 Normal Videos in your website.</span>
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Gradient and Solid color styles <br />
+                    <span class="t2">- We provide special Gradient and solid color designs
+                      to make you website even more attractive.<br />
+                      More designing styles can be added as Extras.
+                      <br /><span class="t3">Extras</span></span>
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Normal Animation and Effects <br />
+                    <span class="t2">- We will add normal animations and effects. More
+                      options can be added as Extras. <br />
+                      <span class="t3">Extras</span>
+                    </span>
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Whatsapp Button, Mail to, Call to action integration,
+                    Business locating Map, Standard Form integration
+                    <br />
+                    <span class="t2">- We will add your whatsapp button on your website, We
+                      will add a direct mailing and calling feature also. Maps
+                      help customers find your shop and navigate easily. We
+                      also provide standard Fillable form. More features can
+                      be added as Extras. <br /><span class="t3">Extras</span></span>
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Free Domain and Hosting <br />
+                    <span class="t2">- We will provide 1 year free Domain and Hosting
+                      Service. <br /><span class="t3">(Domain only for *.com* domains)
+                      </span></span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pckInfo3" id="pck3">
+        <div class="pckContainer">
+          <div class="sectionLeft">
+            <div class="pckInfo">
+              <span class="InfoH1" style="color: white">Premium Plan</span>
+              <hr style="margin-top: 1em" />
+              <div class="infoText" style="padding-top: 0.2em">
+                <ul>
+                  <li class="t1">This package includes upto 9 pages</li>
+                  <br />
+
+                  <li class="t1">
+                    Unlimited Sections<br />
+
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    We give you free Licensed images. <br />
+                    <span class="t2">- You can send us pictures or we will add Licensed
+                      Pictures as Extras. <br />
+
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Max 10 videos supported<br />
+                    <span class="t2">- You can add 10 Normal Videos in your website.</span>
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Premium color styles <br />
+                    <span class="t2">- We provide Animated, Textured, Parallax styles
+                      for your website to give it a premium touch.<br>
+
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Premium Animation and Effects <br />
+
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Everything in Standard and Light Package + Special forms, Chatbots, Checkout Pages
+                    <br />
+                    <span class="t2">- We will include all the features from our previous packages + Specially made
+                      Forms that can be integrated with your Gmail for Email Automation, Chatbots on websites to provide
+                      instant assistance to users, enhancing customer experience, Payment Checkout Pages. <br />
+                  </li>
+                  <br />
+
+                  <li class="t1">
+                    Free Domain and Hosting <br />
+                    <span class="t2">- We will provide 1 year free Domain and Hosting
+                      Service. <br /><span class="t3">(Domain only for *.com* domains)
+                      </span></span>
+                  </li>
+                  <br>
+                  <li class="t1">
+                    Free 1 month RBA+ <br />
+                    <span class="t2">- RBA+ is a service by RBA Softwares.<br /></span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       </section>
     </section>
 
